--- a/style1.css
+++ b/style1.css
@@ -4,6 +4,8 @@ h1{
 img{
 	width:500px;
 	height:500px;
+	margin-left:20px;
+	margin-top:20px;
 }
 
 td{
@@ -14,4 +16,7 @@ td{
 
 th{
 	text-align:left;
+}
+font{
+	font-size:17px;
 }
